# bullet-core

./: .gitignore  2️⃣ Full CI test suite.txt  3️⃣ Bullet-Builder runtime integration.txt  4️⃣ Bullet Runtime Documentation.txt  BULLET-CORE REFERENCE IMPLEMENTATION PROMPT.txt  BULLET_CORE_ARCHITECTURE.md  BULLET_EDUCATION_MANUAL.md  BULLET_SPEC_v1.0.md  BULLET_USER_MANUAL.md  BULLET_VISION_AND_POTENTIAL.md  Bullet_OS_Education.ipynb  Bullet_Universal_Trainer.ipynb  COLAB_README.md  COMPLETE_EXPORT_REPORT.md  CTestConfig.cmake  Final .bullet v1.0 specification.txt  Generate builder prompt.txt  LAUNCH_V1.md  LICENSE-BUILDER  LICENSE-RUNTIME  MANIFESTO.md  MODEL_EVALUATION_REPORT.md  OPENCL_INSTALLATION_GUIDE.md  README.md  TEST_RESULTS.md  WASM_README.md  actions.txt  better.text  betterlogs.txt  build-wasm.sh  build_wasm.sh  build_wasm_complete.sh  bullet  bullet-api.cpp  bullet-api.h  bullet-builder  bullet-builder.cpp  bullet-core  bullet-core Runtime.txt  bullet_cli.cpp  (+28 more)
bq4/: README.md  bq4_attention.h  bq4_format.h  bq4_generation.h  bq4_inference.h  bq4_kernels.h  bq4_loader.h  bq4_sentiment.h  bq4_tokenizer.h  bq4_transformer.h
bullet_core/: CMakeLists.txt  MODEL_REPORT.md  README.md  config_v3.py  config_v3_diagnostic.py  debug_forward.py  debug_ops.py  debug_train.py  expand_dataset.py  export_tokenizer.py  init_stable.py  inspect_model.py  merges.txt  model_evaluation_report.txt  setup.py  test_cpp.py  test_marathi_model.py  test_model.py  test_results.txt  train_marathi.py  train_marathi_gpu.py  train_marathi_upgraded.py  train_production.py  trainer.py  vocab.txt
bullet_core/configs/: marathi_small.yaml
bullet_core/cpp/: bindings.cpp  utils.h
bullet_core/cpp/kernels/: embedding.cpp  gemm.cpp  layernorm.cpp  rmsnorm.cpp  softmax.cpp  vector_ops.cpp
bullet_core/cuda/: cuda_bindings.cpp  cuda_device.cu  cuda_memory.cu  cuda_utils.cuh  gemm_cuda.cu  layernorm_cuda.cu  rmsnorm_cuda.cu  softmax_cuda.cu  vector_ops_cuda.cu
bullet_core/dashboard/: README.md  index.html  server.py  style.css
bullet_core/examples/: train_complete.py  train_simple.py
bullet_core/python/: __init__.py  autograd.py  benchmark.py  checkpoint.py  cuda_ops.py  nn.py  ops.py  optim.py  scheduler.py  tensor.py  test_autograd.py  test_kernels.py  tokenizer.py  trainer.py  training_utils.py  transformer.py
bullet_core/tests/: test_phase2.py
bullet_core/utils/: bullet_io.py  config.py  logger.py  loss_monitor.py  reproducibility.py  sanitize.py
dashboard/: CONFIG_GUIDE.md  QUICK_START.md  TRAINING_OPTIMIZATION.md  TRICOLOR_THEME.md  UI_CHANGES.md  fiixspeed.txt  model_1764589410.bullet  start_dashboard.sh  test_dashboard.py  test_dashboard_ui.sh  trigger_stop.py  trigger_training.py  verify_marathi_model.py
dashboard/backend/: bullet_tokenizer.model  bullet_tokenizer.vocab  main.py  train_engine.py  train_tokenizer.py
dashboard/backend/outputs/: model_1764589501.bullet  model_1764597609.bullet  vocab.txt
dashboard/frontend/: index.html  style.css
dataset_generation/: generate_factbullet_data.py  generate_marathi_dataset.py
docs/: WASM_EVALUATION.md  app.js  bullet_transformer.js  demo.html  demo_live.html  education.html  index.html  marathi_transformer.js  models.html  style.css  styles.css  tokenizer.json  wasm_optimization_guide.md
docs/factbullet/: app.js  index.html  style.css
factbullet/: README.md
factbullet/scraper/: package-lock.json  package.json  server.js
integration/: CMakeLists.txt  README_INTEGRATION.md  bullet_cli.cpp  bullet_export.py  bullet_py_api.py  bullet_python_bindings.cpp  bullet_train_export_example.py  debug_import.py  setup.py  test_inference.py  tiny.bullet  vocab.txt
mobile/android/: BulletJNI.cpp  BulletModel.kt  CMakeLists.txt  bullet_jni.cpp
model_exports/: marathi_philosophy_v1.bq4  marathi_philosophy_v1.bullet.q8  marathi_philosophy_v1_weights.npz
model_exports/deployment_package/: README.md  config.json  inference.py  tokenizer.json
model_exports/wasm_bundle/: README.md  demo.html
release_v1/: BQ4_PAPER.md  README.md  bullet-core.cpp  production_v1.bullet
tests/: CMakeLists.txt  test_bq4_quant.cpp  test_end_to_end.cpp  test_harness.hpp  test_header.cpp  test_runner.cpp  test_tensor_loader.cpp  test_tokenizer.cpp  test_transformer_small.cpp
tests/sample_model/: output.txt  tiny_model.bullet  vocab.txt
wasm_build/: README.md  bullet.js  bullet.wasm  bullet_wasm.cpp  index.html
web/: index.html
